fix(feedback): text alignment, icons rotation
Co-authered-by: moT01 <20648924+moT01@users.noreply.github.com>

--- a/client/src/components/layouts/rtl-layout.css
+++ b/client/src/components/layouts/rtl-layout.css
@@ -46,11 +46,20 @@ Intro project buttons and headings
 }
 
 /* 
+fix misaligned text in button and in donation 
+*/
+
+[dir='rtl'] .link-btn,
+[dir='rtl'] .faq-item h4 {
+  text-align: right;
+}
+
+/* 
  intro to courses section
 */
 
-[dir='rtl'] .link-btn {
-  text-align: right;
+[dir='rtl'] .link-btn.btn-lg > svg {
+  transform: rotate(180deg);
 }
 
 [dir='rtl'] .block-grid .map-title > svg:last-child,
@@ -64,21 +73,33 @@ Intro project buttons and headings
   margin-left: auto;
 }
 
-/* this is used to rotate arrow mark in javascript-algorithms-and-data-structures block
-   the not selector is used to stop it from affecting other section and pages */
+/* 
+this is used to rotate arrow mark in certification block and donation
+the "not" and "is" selector is used to stop it from affecting other section and pages
+*/
+
+/* arrow icon */
 [dir='rtl']
-  .super-block-intro-page
-  .block-ui
-  .block
+  :is(.block:is(:not(.open)), .faq-item:is(:not(.open)))
   .map-title:not(.title-wrapper, .block-header-button-text)
   > svg:first-child {
   transform: rotate(180deg);
 }
 
 /* 
+external fontawesome link icon
+*/
+
+[dir='rtl'] .nav-link > svg,
+[dir='rtl'] td a[target='_blank'] > svg {
+  transform: rotate(270deg);
+}
+
+/* 
 universal-nav-bar
 and menu secion
 */
+
 @media (min-width: 767.5px) {
   [dir='rtl'] .nav-list {
     right: auto;
@@ -178,6 +199,11 @@ sections that need to stay left to right
 [dir='rtl'] h6,
 [dir='rtl'] p,
 [dir='rtl'] td,
-[dir='rtl'] th {
+[dir='rtl'] th,
+[dir='rtl'] .donate-page-wrapper,
+[dir='rtl'] .donate-page-wrapper b,
+[dir='rtl'] .donate-page-wrapper h3,
+[dir='rtl'] .donate-page-wrapper p,
+[dir='rtl'] [name='payment-method'] {
   font-family: 'NotoSansArabic';
 }
